--- a/CH1_机器学习理论基础.ipynb
+++ b/CH1_机器学习理论基础.ipynb
@@ -63,7 +63,7 @@
    "source": [
     "### 类别不平衡问题\n",
     "\n",
-    "类别不平衡指的就是分类任务中不同类别的训练样例比例差别很大。即使原始问题中不同类别的训练样例比例均衡，经过 OvR 、MvM 之后产生的二分类任务仍可能出行不平衡现象。\n",
+    "类别不平衡指的就是**分类任务**中不同类别的训练样例比例差别很大。即使原始问题中不同类别的训练样例比例均衡，经过 OvR 、MvM 之后产生的二分类任务仍可能出行不平衡现象。\n",
     "\n",
     "不失一般性，我们假设正例样例少。令 $m^+$ 表示正例数目， $m^-$ 表示反例数目，观测几率是 $\\frac{m^+}{m^-}$，我们通常假设**训练集是真实样本总体的无偏采样。**因此，预测几率高于观测几率应判定为正例，即若\n",
     "\n",
@@ -84,7 +84,9 @@
     "\n",
     "1. 对反例进行“欠采样”(undersampling)：利用集成学习机制，将反例划分为若干集合供不同学习器学习，对每个学习器进行欠采样，但没有丢失重要信息；\n",
     "2. 对正例进行“过采样”(oversampling)：不能简单对正例样本进行重复采样，可以通过插值来产生额外正例；\n",
-    "3. 按照原始训练集进行学习，进行预测时，将上面的缩放公式嵌入决策过程，称为“阈值移动”（threshold-moving）。"
+    "3. 按照原始训练集进行学习，进行预测时，将上面的缩放公式嵌入决策过程，称为“阈值移动”（threshold-moving）。\n",
+    "\n",
+    "[详细请参考](https://zhuanlan.zhihu.com/p/34782497)"
    ]
   },
   {
