--- a/CH11_降维与度量学习.ipynb
+++ b/CH11_降维与度量学习.ipynb
@@ -305,7 +305,7 @@
    "source": [
     "一般来说，欲获得低维子空间，最简单的是对原始高维空间进行线性变换。给定 d 维空间样本 \n",
     "\n",
-    "$$X = (\\mathbf{x}_1, \\mathbf{x}_2,...,\\mathbf{x}_m)\\in R^{d\\times m},\\; \\mathbf{x}_i\\in R^{d\\times 1}$$\n",
+    "$$X = (\\mathbf{x}_{:,1}, \\mathbf{x}_{:,2},...,\\mathbf{x}_{:,m})\\in R^{d\\times m},\\; \\mathbf{x}_{:,i}\\in R^{d\\times 1}$$\n",
     "\n",
     "变换之后得到 $d_1 \\leq d$ 维空间样本\n",
     "\n",
@@ -314,15 +314,15 @@
     "其中 \n",
     "* $\\mathbf{W}\\in R^{d\\times d_1}$ 是变换矩阵，可视为 $d_1$ 个 d 维向量：\n",
     "\n",
-    "     $$\\mathbf{W} = (\\mathbf{w}_1,\\mathbf{w}_2,...,\\mathbf{w}_{d_1}),\\; \\mathbf{w}_i\\in R^{d\\times 1} $$\n",
+    "     $$\\mathbf{W} = (\\mathbf{w}_{:,1},\\mathbf{w}_{:,2},...,\\mathbf{w}_{:,d_1}),\\; \\mathbf{w}_{:,i}\\in R^{d\\times 1} $$\n",
     "\n",
     "* $\\mathbf{Z}\\in R^{d_1\\times m}$ 是样本在新空间中的表达：\n",
     "\n",
-    "$$Z = (\\mathbf{z}_1, \\mathbf{z}_2,...,\\mathbf{z}_m), \\; \\mathbf{z}_i\\in R^{d_1\\times 1}$$\n",
+    "$$Z = (\\mathbf{z}_{:,1}, \\mathbf{z}_{:,2},...,\\mathbf{z}_{:,m}), \\; \\mathbf{z}_{:,i}\\in R^{d_1\\times 1}$$\n",
     "\n",
     "由 (PCA-1) 可知\n",
     "\n",
-    "$$\\mathbf{z}_i = \\mathbf{W}^T \\mathbf{x}_i$$\n",
+    "$$\\mathbf{z}_{:,i} = \\mathbf{W}^T \\mathbf{x}_{:,i}$$\n",
     "\n",
     "是第 i 个样本与这 $d_1$ 个基向量分别做内积得到的 $d_1$ 维属性向量。"
    ]
@@ -331,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**基于线性变换来进行降维的方法为线性降维方法，都符合 (PCA-1) 的基本形式。** 不同之处在于对低维子空间的性质也就是 $\\mathbf{W}$ 有不同的要求，在 PCA 中我们会看到，若要求对低维子空间要求具有最大可分性， 会得到 常用的线性降维方法 PCA.\n",
+    "**基于线性变换来进行降维的方法为线性降维方法，都符合 (PCA-1) 的基本形式。** 不同之处在于对低维子空间的性质也就是 $\\mathbf{W}$ 有不同的要求，在 PCA 中我们会看到，若要求对低维子空间要求具有最大可分性， 会得到常用的线性降维方法 PCA.\n",
     "\n",
     "对降维效果的评估，通常是比较降维前后学习器性能的差异。"
    ]
@@ -383,16 +383,16 @@
    "metadata": {},
    "source": [
     "先提出两个假定：\n",
-    "* 假设数据样本进行了中心化，即$ \\sum_i \\mathbf{x}_i=0$\n",
+    "* 假设数据样本进行了中心化，即$ \\sum_i \\mathbf{x}_{:,i}=0$\n",
     "* 假设投影变换后得到的新坐标系为 \n",
-    "$$\\{\\mathbf{w}_1,\\mathbf{w}_2,...,\\mathbf{w}_{d}\\}, \\quad ||\\mathbf{w}_i||_2 = 1, \\quad \\mathbf{w}_i^T \\mathbf{w}_j=0\\; (i\\neq j)$$也就是说，$\\mathbf{w}_i$ 是正交向量。\n"
+    "$$\\{\\mathbf{w}_{:,1},\\mathbf{w}_{:,2},...,\\mathbf{w}_{:,d}\\}, \\quad ||\\mathbf{w}_{:,i}||_2 = 1, \\quad \\mathbf{w}_{:,i}^T \\mathbf{w}_{:,j}=0\\; (i\\neq j)$$也就是说，$\\mathbf{w}_{:,i}$ 是正交向量。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "如果舍弃新坐标系中的部分坐标，将维度降低到 $d_1\\leq d$，则样本点 $\\mathbf{x}_i$ 在低维坐标系中的投影是 $\\mathbf{z}_i\\in R^{d_1\\times 1}$。由 $\\mathbf{z}_i = \\mathbf{W}^T \\mathbf{x}_i$ 可知"
+    "如果舍弃新坐标系中的部分坐标，将维度降低到 $d_1\\leq d$，则样本点 $\\mathbf{x}_{:,i}$ 在低维坐标系中的投影是 $\\mathbf{z}_{:,i}\\in R^{d_1\\times 1}$。由 $\\mathbf{z}_{:,i} = \\mathbf{W}^T \\mathbf{x}_{:,i}$ 可知"
    ]
   },
   {
@@ -401,26 +401,26 @@
    "source": [
     "$$\\left(                 \n",
     "\\begin{array}{c}   \n",
-    "z_{i1}\\\\  \n",
+    "z_{1,i}\\\\  \n",
     "\\vdots\\\\\n",
-    "z_{id_1}\\\\\n",
+    "z_{d_1,i}\\\\\n",
     "\\end{array} \n",
     "\\right)\n",
-    "=\\mathbf{z}_i = \\mathbf{W}^T \\mathbf{x}_i\n",
+    "=\\mathbf{z}_{:,i} = \\mathbf{W}^T \\mathbf{x}_{:,i}\n",
     "=\\left(\n",
     "\\begin{array}{c}   \n",
-    "\\mathbf{w}_1^T\\\\  \n",
+    "\\mathbf{w}_{:,1}^T\\\\  \n",
     "\\vdots\\\\\n",
-    "\\mathbf{w}_{d_1}^T\\\\\n",
+    "\\mathbf{w}_{:,d_1}^T\\\\\n",
     "\\end{array} \n",
-    "\\right)\\cdot \\mathbf{x}_i$$        "
+    "\\right)\\cdot \\mathbf{x}_{:,i}$$        "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "所以我们有 $z_{ij} = \\mathbf{w}_{j}^T \\mathbf{x}_i$，是在低维坐标系下第 j 维的坐标。 记 $\\mathbf{x}_i$ 在低维空间的投影样本为 $\\hat{\\mathbf{x}}_i$,则有 $\\hat{\\mathbf{x}}_i = \\sum_{j=1}^{d_1}z_{ij}\\mathbf{w}_{j}$."
+    "所以我们有 $z_{ji} = \\mathbf{w}_{:,j}^T \\mathbf{x}_{:,i}=\\sum_{k=1}^d w_{jk}x_{kj}$，是在低维坐标系下第 j 维的坐标。 记 $\\mathbf{x}_{:,i}$ 在低维空间的投影样本为 $\\hat{\\mathbf{x}}_{:,i}$,则有 $\\hat{\\mathbf{x}}_{:,i} = \\sum_{j=1}^{d_1}z_{ji}\\mathbf{w}_{:,j}$."
    ]
   },
   {
@@ -430,13 +430,18 @@
     "针对整个 $\\mathbf{X}$ 的样本，考虑原样本点到投影之后的样本点之间的距离为\n",
     "\n",
     "$$\\begin{split}\n",
-    "&\\sum_{i=1}^m ||\\sum_{j=1}^{d_1}z_{ij}\\mathbf{w}_{j}- \\mathbf{x}_i||^2\\\\\n",
-    "=& \\sum_{i=1}^m \\left( \\sum_{n=1}^{d_1}z_{in}\\mathbf{w}_{n}- \\mathbf{x}_i \\right)^T \\left(\\sum_{m=1}^{d_1}z_{im}\\mathbf{w}_{m}- \\mathbf{x}_i\\right)\\\\\n",
-    "=& \\sum_{i=1}^m \\left( \\sum_{n=1}^{d_1}\\sum_{m=1}^{d_1} z_{in}z_{im}\\mathbf{w}_{n}^T\\mathbf{w}_{m} - \\sum_{n=1}^{d_1}z_{in}\\mathbf{w}_{n}^T\\mathbf{x}_i - \\sum_{m=1}^{d_1}z_{im}\\mathbf{x}_i^T\\mathbf{w}_{m} + \\mathbf{x}_i^T\\mathbf{x}_i\\right)\\\\\n",
-    "=& \\sum_{i=1}^m \\left(\\sum_{n=1}^{d_1}z_{in}^2 - 2 \\sum_{n=1}^{d_1}z_{in}\\mathbf{w}_{n}^T\\mathbf{x}_i + ||\\mathbf{x}_i||^2\\right)\\\\\n",
-    "=&\\sum_{i=1}^m \\left(\\sum_{n=1}^{d_1}z_{in}^2 - 2 \\sum_{n=1}^{d_1}z_{in}^2 + ||\\mathbf{x}_i||^2\\right)\\\\\n",
-    "=& -\\sum_{i=1}^m \\mathbf{z}_{i}^T\\mathbf{z}_{i} + \\sum_{i=1}^m ||\\mathbf{x}_i||^2\\\\\n",
-    "\\propto & \\; -tr\\left(\\mathbf{W}^T\\left(\\sum_{i=1}^m \\mathbf{x}_i \\mathbf{x}_i^T\\right)\\mathbf{W}\\right)\\\\\n",
+    "&\\sum_{i=1}^m ||\\sum_{j=1}^{d_1}z_{ji}\\mathbf{w}_{:,j}- \\mathbf{x}_{:,i}||^2\\\\\n",
+    "=& \\sum_{i=1}^m \\left( \\sum_{n=1}^{d_1}z_{ni}\\mathbf{w}_{:,n}- \\mathbf{x}_{:,i} \\right)^T \\left(\\sum_{m=1}^{d_1}z_{mi}\\mathbf{w}_{:,m}- \\mathbf{x}_{:,i}\\right)\\\\\n",
+    "=& \\sum_{i=1}^m \\left( \\sum_{n=1}^{d_1}\\sum_{m=1}^{d_1} z_{ni}z_{mi}\\mathbf{w}_{:,n}^T\\mathbf{w}_{:,m} - \\sum_{n=1}^{d_1}z_{ni}\\mathbf{w}_{:,n}^T\\mathbf{x}_{:,i} - \\sum_{m=1}^{d_1}z_{mi}\\mathbf{x}_{:,i}^T\\mathbf{w}_{:,m} + \\mathbf{x}_{:,i}^T\\mathbf{x}_{:,i}\\right)\\\\\n",
+    "=& \\sum_{i=1}^m \\left(\\sum_{n=1}^{d_1}z_{ni}^2 - 2 \\sum_{n=1}^{d_1}z_{ni}\\mathbf{w}_{:,n}^T\\mathbf{x}_{:,i} + ||\\mathbf{x}_{:,i}||^2\\right)\\\\\n",
+    "=&\\sum_{i=1}^m \\left(\\sum_{n=1}^{d_1}z_{ni}^2 - 2 \\sum_{n=1}^{d_1}z_{ni}^2 + ||\\mathbf{x}_{:,i}||^2\\right)\\\\\n",
+    "=& -\\sum_{i=1}^m \\mathbf{z}_{:,i}^T\\mathbf{z}_{:,i} + \\sum_{i=1}^m ||\\mathbf{x}_{:,i}||^2\\\\\n",
+    "=&-\\sum_{i=1}^m(\\sum_{k}^{d_1}z_{ki}^2) + \\sum_{i=1}^m ||\\mathbf{x}_{:,i}||^2\\\\\n",
+    "=&-\\sum_{i=1}^m\\sum_{k}^{d_1}(\\mathbf{w}_{:,k}^T\\mathbf{x}_{:,i})^2 + \\sum_{i=1}^m ||\\mathbf{x}_{:,i}||^2\\\\\n",
+    "=&-\\sum_{i=1}^m\\sum_{k}^{d_1}(\\mathbf{w}_{:,k}^T\\mathbf{x}_{:,i})(\\mathbf{w}_{:,k}^T\\mathbf{x}_{:,i})^T + \\sum_{i=1}^m ||\\mathbf{x}_{:,i}||^2\\\\\n",
+    "=&-\\sum_{i=1}^m\\sum_{k}^{d_1}\\mathbf{w}_{:,k}^T\\mathbf{x}_{:,i}\\mathbf{x}_{:,i}^T\\mathbf{w}_{:,k} + \\sum_{i=1}^m ||\\mathbf{x}_{:,i}||^2\\\\\n",
+    "=&-\\sum_{k}^{d_1}\\mathbf{w}_{:,k}^T(\\sum_{i=1}^m\\mathbf{x}_{:,i}\\mathbf{x}_{:,i}^T)\\mathbf{w}_{:,k}+ \\sum_{i=1}^m ||\\mathbf{x}_{:,i}||^2\\\\\n",
+    "\\propto & \\; -tr\\left(\\mathbf{W}^T\\left(\\sum_{i=1}^m \\mathbf{x}_{:,i} \\mathbf{x}_{:,i}^T\\right)\\mathbf{W}\\right)\\\\\n",
     "\\propto & --tr\\left(\\mathbf{W}^T\\mathbf{X}\\mathbf{X}^T\\mathbf{W}\\right)\n",
     "\\end{split}\\tag{PCA-1.1}$$"
    ]
@@ -446,17 +451,10 @@
    "metadata": {},
    "source": [
     "备注：\n",
-    "1. $\\mathbf{w}_{n}^T\\mathbf{x}_i = \\mathbf{x}_i^T \\mathbf{w}_{n}$\n",
-    "2. 最后一步$\\propto$对应的矩阵运算还没弄清楚：\n",
-    "$$\\begin{split}\n",
-    "-\\sum_{i=1}^m \\mathbf{z}_{i}^T\\mathbf{z}_{i} \n",
-    "&= \\mathbf{Z}^T \\mathbf{Z}\\\\\n",
-    "&=(\\mathbf{W}^T \\mathbf{X})^T(\\mathbf{W}^T \\mathbf{X})\\\\\n",
-    "&=\\mathbf{X}^T\\mathbf{W}\\mathbf{W}^T \\mathbf{X}\\\\\n",
-    "&=\\mathbf{X}^T\\mathbf{X}\\\\\n",
-    "\\end{split}$$\n",
+    "1. 对于标量 a 有 $a^2 = aa^T = a^Ta$\n",
+    "2. 对于矩阵 $\\mathbf{A}$，其列向量为 $\\mathbf{a}_{:,i}$，则有\n",
     "\n",
-    "如果上面的推导过程是正确的，如何出现上面正比于 tr 的结果呢？"
+    "$$\\sum_{i=1}^n \\mathbf{a}_{:,i}^T\\mathbf{a}_{:,i} = tr(\\mathbf{A}^T\\mathbf{A})$$"
    ]
   },
   {
@@ -482,7 +480,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "样本点 $\\mathbf{x}_i$ 在低维坐标系中的投影是 $\\mathbf{W}^T \\mathbf{x}_i$，从最大可分性角度考虑，所有样本点投影后的样本方差最大化。考虑到假设1，中心化的样本的均值是 $\\mathbf{0}$，所以对应的方差为 $\\sum_{i=1}^m\\mathbf{W}^T\\mathbf{x}_i \\mathbf{x}_i^T\\mathbf{W}$，于是优化目标可以写成：\n",
+    "样本点 $\\mathbf{x}_{:,i}$ 在低维坐标系中的投影是 $z_{:,i}=\\mathbf{W}^T \\mathbf{x}_{:,i}$，考虑到假设1，由 $ \\sum_i \\mathbf{x}_{:,i}=0$ 可知 $ \\sum_i \\mathbf{z}_{:,i}=0$，即中心化后的样本均值为 0。\n",
+    "\n",
+    "从最大可分性角度考虑，所有样本点投影后的样本方差最大化，所以对应的方差为（具体推导过程见上面“最大重构性”）\n",
+    "\n",
+    "$$\\sum_{i=1}^m z_{:,i}^2=\\sum_{i=1}^m\\mathbf{W}^T\\mathbf{x}_{:,i} \\mathbf{x}_{:,i}^T\\mathbf{W}$$\n",
+    "\n",
+    "\n",
+    "于是优化目标可以写成：\n",
     "\n",
     "$$\\begin{split}\n",
     "&\\max_{\\mathbf{W}} \\; tr\\left(\\mathbf{W}^T\\mathbf{X}\\mathbf{X}^T\\mathbf{W}\\right)\\\\\n",
@@ -2488,7 +2493,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "273.188px"
+    "width": "274.188px"
    },
    "toc_section_display": true,
    "toc_window_display": true
