--- a/CH4_逻辑回归.ipynb
+++ b/CH4_逻辑回归.ipynb
@@ -77,6 +77,13 @@
    "source": [
     "通过对数几率回归的定义可知，实际上是_**用线性回归模型的预测结果去逼近真实标记的对数几率。因此，对应的模型称之为“对数几率回归”（logistic regression, 简称 LR）。虽然名字叫“回归”，但实际上是一个分类学习方法。**_\n",
     "\n",
+    "**当 $\\mathbf{w}^T\\mathbf{x} + b = 0$ 时，对应的$y=0.5, \\; 1-y=0.5$，恰好说明直线 $\\mathbf{w}^T\\mathbf{x} + b = 0$ 成为了正例和反例的概率分界线。**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**LR的优点如下：**\n",
     "\n",
     "1. 直接对分类可能性进行建模，无需假设数据分布，避免了假设分布不准确所带来的问题；\n",
@@ -136,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 成本函数\n",
+    "## 成本函数\n",
     "\n",
     "我们可以通过1.2节的**对数最大似然估计**来求解 LR(x) 关于参数的偏导数 $\\frac{\\partial \\ell}{\\partial \\theta_j}$。"
    ]
@@ -154,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "从概率角度看对数几率回归，可以写成\n",
+    "从概率角度看对数几率回归(取值范围为(0,1)，所以可以看成概率)，可以写成\n",
     "\n",
     "$$P(y=1|x,\\theta) = g^{-1}\\circ f(x,\\theta) = \\frac{1}{1 + e^{-\\theta ^T x}}$$"
    ]
