--- a/CH5_支持向量机SVC&SVR.ipynb
+++ b/CH5_支持向量机SVC&SVR.ipynb
@@ -441,8 +441,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "软间隔允许部分样本不满足约束\n",
-    "$$ y_i(\\mathbf{w}^T \\mathbf{x}_i + b)\\geq  1$$"
+    "软间隔允许部分样本不满足约束，即这部分不满足约束的样本满足下式\n",
+    "\n",
+    "$$ y_i(\\mathbf{w}^T \\mathbf{x}_i + b)< 1$$"
    ]
   },
   {
@@ -464,7 +465,7 @@
     "\\left \\{\n",
     "\\begin{aligned}\n",
     "1 & \\quad if \\; z<0;\\\\\n",
-    "0 & \\quad otherwise. \n",
+    "0 & \\quad if \\; z\\geq 0;. \n",
     "\\end{aligned}\\right.$$"
    ]
   },
