--- a/CH11_降维与度量学习.ipynb
+++ b/CH11_降维与度量学习.ipynb
@@ -512,7 +512,7 @@
     "\n",
     "$$f(\\mathbf{W}, \\lambda) = -tr\\left(\\mathbf{W}^T\\mathbf{X}\\mathbf{X}^T\\mathbf{W}\\right) + \\lambda(\\mathbf{W}^T\\mathbf{W}-\\mathbf{I})$$\n",
     "\n",
-    "由 $\\frac{\\partial f}{\\partial \\mathbf{W}} = 0$ 可得（我没有严格推导）\n",
+    "由 $\\frac{\\partial f}{\\partial \\mathbf{W}} = 0$ 可得\n",
     "\n",
     "$$\\mathbf{X}\\mathbf{X}^T\\mathbf{W} = \\lambda\\mathbf{W} $$"
    ]
