--- a/CH2_最优化理论.ipynb
+++ b/CH2_最优化理论.ipynb
@@ -172,7 +172,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 牛顿求根法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 共轭梯度法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## [最大似然估计（maximum likelihood estimation，缩写为MLE）](https://zh.wikipedia.org/wiki/%E6%9C%80%E5%A4%A7%E4%BC%BC%E7%84%B6%E4%BC%B0%E8%AE%A1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 二分类问题对应的定义"
    ]
   },
   {
@@ -192,11 +213,76 @@
     "\n",
     "$$\\ell(\\theta) = \\ln L(\\theta) = \\sum_{i=1}^{m} y_i \\ln P(x_i;\\theta) + \\sum_{i=1}^{m} (1-y_i) \\ln (1-P(x_i;\\theta))$$\n",
     "\n",
-    "一般求解会对对数似然函数求关于 $\\theta$ 的最小值，利于计算和求导。称\n",
+    "称\n",
     "\n",
-    "$$ \\theta^{\\star} = -\\arg\\min_{\\theta}\\ell(\\theta)$$\n",
+    "$$ \\theta^{\\star} = \\arg\\max_{\\theta}\\ell(\\theta) = -\\arg\\min_{\\theta}\\ell(\\theta)$$\n",
     "\n",
-    "为**最小对数似然估计**，相应的最大似然估计是对 $L(\\theta)$ 求 关于 $\\theta$ 的最大值。"
+    "为**最大化对数似然估计**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 最大似然函数与最小化交叉熵的等价性"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "考虑一组含有 m 个样本的数据集 $\\mathbf{X} = \\{\\mathbf{x}_1,\\mathbf{x}_2, \\cdots,\\mathbf{x}_m\\}$，由未知的真实数据分布 $p_{data}(\\mathbf{x})$ 生成。\n",
+    "\n",
+    "令 $p_{model}(\\mathbf{x};\\mathbf{\\theta})$ 是一族由 $\\mathbf{\\theta}$ 确定在相同空间上的概率分布。换言之，$p_{model}(\\mathbf{x};\\mathbf{\\theta})$ 是 模型或者神经网络模型对 $p_{data}(\\mathbf{x})$ 的逼近。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "则 $\\mathbf{\\theta}$ 的最大似然估计被定义为\n",
+    "\n",
+    "$$\\mathbf{\\theta}_{ML} = \\arg\\max_{\\mathbf{\\theta}}p_{model}(\\mathbf{X};\\mathbf{\\theta})=\\arg\\max_{\\mathbf{\\theta}}\\prod_{i=1}^m p_{model}(\\mathbf{x}_i;\\mathbf{\\theta})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "多个数值的乘积容易导致数值下溢，我们发现似然对数不会改变 $\\arg\\max$，我们将乘积通过对数函数转换为求和形式：\n",
+    "\n",
+    "$$\\mathbf{\\theta}_{ML} = \\arg\\max_{\\mathbf{\\theta}}\\sum_{i=1}^{m}\\log p_{model}(\\mathbf{x}_i;\\mathbf{\\theta})$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "因为缩放代价函数不会改变 $\\arg\\max$，我们可以除以 m 得到和训练数据经验分布 $\\hat{p}_{data}(\\mathbf{x})$ 相关的期望作为准则：\n",
+    "\n",
+    "$$\\mathbf{\\theta}_{ML} = \\arg\\max_{\\mathbf{\\theta}}E_{\\mathbf{x}\\sim \\hat{p}_{data}}\\log p_{model}(\\mathbf{x};\\mathbf{\\theta})$$\n",
+    "\n",
+    "注：[大数定律](https://zh.wikipedia.org/wiki/%E5%A4%A7%E6%95%B0%E5%AE%9A%E5%BE%8B)可以支持以上转换的成立。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "一种解释最大似然估计的观点是，将它看做最小化训练集上的经验分布 $\\hat{p}_{data}$ 和模型分布之间的差异(**也就是模型分布尽可能和经验分布 $\\hat{p}_{data}$ 相匹配**)，两者之间的差异可以通过 KL 散度度量：\n",
+    "\n",
+    "$$D_{KL}(\\hat{p}_{data}||p_{model}) =E_{x\\sim \\hat{p}_{data}}\\;[\\log \\hat{p}_{data}(\\mathbf{x})-\\log p_{model}(\\mathbf{x})]$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "等式右侧第一项不涉及模型，意味着训练模型最小化 KL 散度时，只需要最小化\n",
+    "\n",
+    "$$-E_{x\\sim \\hat{p}_{data}}\\;\\log p_{model}(\\mathbf{x})$$\n",
+    "\n",
+    "所以**最大化对数似然等价于最小化 KL 散度，也等价于最小化交叉熵。**"
    ]
   },
   {
