--- a/CH3_线性回归.ipynb
+++ b/CH3_线性回归.ipynb
@@ -41,11 +41,37 @@
     "\n",
     "$$f(x_i) = w x_i + b  \\quad s.t. f(x_i) \\approx y_i, \\quad (x_i, y_i) \\in D$$\n",
     "\n",
-    "我们通过MSE来度量 $f(x_i)$与 y 之间的误差，进而也得到了 w 和 b 的值：\n",
+    "我们通过MSE来度量 $f(x_i)$与 y 之间的误差 $E(w,b)=\\sum_{i=1}^m (y_i - w x_i - b)^2$，进而也得到了 w 和 b 的值：\n",
     "\n",
     "$$\\begin{split}(w^*, b^*) =  &\\arg\\min_{(w, b)} \\sum_{i=1}^m (f(x_i) - y_i)^2 \\\\\n",
     "= & \\arg\\min_{(w, b)} \\sum_{i=1}^m (y_i - w x_i - b)^2\n",
     "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "将 $E(w,b)$ 分别对 w,b 进行求导，导数等于0：\n",
+    "\n",
+    "$$\\begin{split}\n",
+    "&\\frac{\\partial E(w,b)}{\\partial w} = 2\\left( w\\sum_{i=1}^m x_i^2 - \\sum_{i=1}^m(y_i-b)x_i\\right)=0\\\\\n",
+    "&\\frac{\\partial E(w,b)}{\\partial b} = 2\\left( mb - \\sum_{i=1}^m(y_i-wx_i)\\right)=0\\\\\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "得到 w,b 的最优闭式解：\n",
+    "\n",
+    "$$\\begin{split}\n",
+    "& w=\\frac{\\sum_{i=1}^m y_i(x_i-\\bar{x})}{\\sum_{i=1}^m x_i^2 - \\frac{1}{m}\\left(\\sum_{i=1}^m x_i\\right)^2}\\\\\n",
+    "& b= \\frac{1}{m}\\sum_{i=1}^m(y_i-wx_i)\n",
+    "\\end{split}$$\n",
+    "\n",
+    "其中 $\\bar{x}=\\sum_{i=1}^m x_i$ 为 x 的均值。"
    ]
   },
   {
@@ -68,11 +94,38 @@
     "对应的成本函数是：\n",
     "\n",
     "$$\\begin{split}\n",
-    "J(\\mathbf\\theta)= &\\frac{1}{2m}\\sum_{i=1}^{m}(h(\\textbf{x}^{(i)})-y^{(i)})^{2}\\\\\n",
-    "=& \\frac{1}{2m}(\\mathbf{X \\theta} - \\overrightarrow{y})^T(\\mathbf{X\\theta} - \\overrightarrow{y})\n",
+    "J(\\mathbf{\\theta})= &\\frac{1}{2m}\\sum_{i=1}^{m}(h(\\textbf{x}^{(i)})-y^{(i)})^{2}\\\\\n",
+    "=& \\frac{1}{2m}(\\mathbf{X \\theta} - \\mathbf{y})^T(\\mathbf{X\\theta} - \\mathbf{y})\n",
     "\\end{split}$$\n",
     "\n",
     "其中 X 是 m*(n+1)的训练样本矩阵。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$J(\\mathbf{\\theta})$ 对 $\\mathbf{\\theta}$ 求导并且等于 $\\mathbf{0}$，得到\n",
+    "\n",
+    "$$\\frac{\\partial J(\\mathbf{\\theta})}{\\partial \\mathbf{\\theta}} = 2 \\mathbf{X}^T(\\mathbf{X}\\mathbf{\\theta} - \\mathbf{y})=\\mathbf{0}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "如果 $\\mathbf{X}^T\\mathbf{X}$ 为满秩矩阵或者正定矩阵时，我们有\n",
+    "\n",
+    "$$\\mathbf{\\theta}^\\ast = (\\mathbf{X}^T\\mathbf{X})^{-1}\\mathbf{X}^T\\mathbf{y}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "现实任务中 $\\mathbf{X}^T\\mathbf{X}$ 往往不是满秩矩阵，比如许多任务中我们会遇到特征个数超过样例个数，导致 $\\mathbf{X}$ 列数多于行数，此时可以解出多个解都满足 MSE 最小化。可以通过引入正则化，由学习算法的归纳偏好来决定引入哪个解。\n",
+    "\n",
+    "当矩阵过大时，求逆运算不是很容易，矩阵不可逆时，上述的最小二乘法求解最优参数是不可行的。所以我们通过如下的梯度下降迭代的方法寻找最佳参数。"
    ]
   },
   {
