--- a/CH4_逻辑回归.ipynb
+++ b/CH4_逻辑回归.ipynb
@@ -84,6 +84,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "从概率角度看对数几率回归(取值范围为(0,1)，所以可以看成概率)，可以写成\n",
+    "\n",
+    "$$P(y=1|x,\\theta) = g^{-1}\\circ f(x,\\theta) = \\frac{1}{1 + e^{-\\theta ^T x}}$$\n",
+    "\n",
+    "更详细的介绍请查看[“Logistic sigmoid 函数”章节。](https://github.com/BofengChen/ml_notes/blob/master/CH0_%E6%95%B0%E5%AD%A6%E5%85%AC%E5%BC%8F.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**LR的优点如下：**\n",
     "\n",
     "1. 直接对分类可能性进行建模，无需假设数据分布，避免了假设分布不准确所带来的问题；\n",
@@ -143,16 +154,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 成本函数\n",
-    "\n",
-    "我们可以通过1.2节的**对数最大似然估计**来求解 LR(x) 关于参数的偏导数 $\\frac{\\partial \\ell}{\\partial \\theta_j}$。"
+    "## 成本函数"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "对数似然函数为\n",
+    "二分类问题对应的对数似然函数为\n",
     "\n",
     "$$\\ell(\\theta) = \\sum_{i=1}^{m} y_i \\ln P(x_i;\\theta) + \\sum_{i=1}^{m} (1-y_i) \\ln (1-P(x_i;\\theta))$$"
    ]
@@ -161,16 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "从概率角度看对数几率回归(取值范围为(0,1)，所以可以看成概率)，可以写成\n",
-    "\n",
-    "$$P(y=1|x,\\theta) = g^{-1}\\circ f(x,\\theta) = \\frac{1}{1 + e^{-\\theta ^T x}}$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "带入对数似然函数可以得到\n",
+    "将 LR 模型中 $P(x_i;\\theta)=\\frac{1}{1 + exp({-\\theta ^T x})}$ 带入对数似然函数可以得到\n",
     "\n",
     "$$\\begin{split}\n",
     "\\ell(\\theta) = &\\sum_{i=1}^{m} y_i\\ln P(x_i;\\theta) + \\sum_{i=1}^{m} (1-y_i) \\ln (1-P(x_i;\\theta))\\\\\n",
@@ -183,14 +183,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_**成本函数 $J(\\theta) = - \\frac{1}{m}\\ell(\\theta)$，是一个凸函数，所以可以采用梯度下降法等凸优化方法求解极值。**_"
+    "我们定义**LR 问题的成本函数**如下：\n",
+    "\n",
+    "$$J(\\theta) = - \\frac{1}{m}\\ell(\\theta)$$\n",
+    "\n",
+    "上式是一个凸函数，所以可以采用梯度下降法等凸优化方法求解极值。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "记$h_{\\theta}(x) = g^{-1}\\circ f$对上式关于参数求偏导，得到\n",
+    "根据梯度下降法的迭代公式有\n",
+    "\n",
+    "$$\\begin{split}\\theta_j = &\\theta_j - \\alpha \\frac{\\partial J(\\theta)}{\\partial \\theta_j} \\\\\n",
+    "=& \\theta_j + \\frac{\\alpha}{m} \\frac{\\partial\\ell(\\theta)}{\\partial \\theta_j} \\\\\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "记 $h_{\\theta}=g^{-1}\\circ f$，求解 $\\frac{\\partial\\ell(\\theta)}{\\partial \\theta_j}$ 得到\n",
     "\n",
     "$$\\begin{split}\\frac{\\partial \\ell}{\\partial \\theta_j}=& -\\sum_{i=1}^m \\frac{e^{\\theta^T x_i}}{1 + e^{\\theta ^T x_i}} x_{ij} + \\sum_{i=1}^m y_i x_{ij}\\\\\n",
     "=& -\\sum_{i=1}^{m} \\frac{1}{1 + e^{-\\theta ^T x_i}}x_{ij}+ \\sum_{i=1}^{m} y_i x_{ij}\\\\\n",
@@ -202,11 +217,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "根据梯度下降法的迭代公式有\n",
+    "带入得到 LR 问题对应的梯度下降公式为：\n",
     "\n",
-    "$$\\begin{split}\\theta_j = &\\theta_j - \\alpha \\frac{\\partial J(\\theta)}{\\partial \\theta_j} \\\\\n",
-    "=& \\theta_j + \\alpha \\frac{\\partial\\ell(\\theta)}{\\partial \\theta_j} \\\\\n",
-    "= &\\theta_j - \\frac{\\alpha}{m}\\sum_{i=1}^{m}(h_\\theta(\\textbf{x}_{i})-y_{i})x_{ij}\n",
+    "$$\\begin{split}\\theta_j = &\\theta_j - \\frac{\\alpha}{m}\\sum_{i=1}^{m}(h_\\theta(\\textbf{x}_{i})-y_{i})x_{ij}\n",
     "\\end{split}$$"
    ]
   },
@@ -256,11 +269,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-12-12T13:49:17.605000Z",
-     "start_time": "2018-12-12T13:49:17.566000Z"
+     "end_time": "2019-03-01T02:25:47.756000Z",
+     "start_time": "2019-03-01T02:25:47.626000Z"
     }
    },
    "outputs": [
@@ -301,11 +314,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-12-12T13:49:19.057000Z",
-     "start_time": "2018-12-12T13:49:19.038000Z"
+     "end_time": "2019-03-01T02:25:58.330000Z",
+     "start_time": "2019-03-01T02:25:58.295000Z"
     }
    },
    "outputs": [
@@ -324,7 +337,7 @@
        "      dtype='|S23')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,11 +355,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-12-12T13:49:20.379000Z",
-     "start_time": "2018-12-12T13:49:20.361000Z"
+     "end_time": "2019-03-01T02:26:00.360000Z",
+     "start_time": "2019-03-01T02:26:00.337000Z"
     }
    },
    "outputs": [],
